--- a/AutumnWillow/res/README
+++ b/AutumnWillow/res/README
@@ -12,11 +12,15 @@ https://github.com/JackalsoftGames/AutumnWillow_sfml
 
 #####
 
-"Old Wizard" 
-  (old_wizard.ttf)
+"Old Wizard" (old_wizard.ttf)
 By: Angel
 Released under Public Domain.
 http://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=168 
+
+"CourierPixel" (courier_pixel.ttf)
+By: Jesse C
+Released under Public Domain.
+http://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=4776
 
 Schubert - Four Impromptus, D. 935, Op. Posth. 142: No. 3 in B-Flat Major
   (bgm00.ogg, bgm01.ogg, bgm02.ogg)
